<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:onClick="Buscar"
        android:text="@string/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/txtCod"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/txtCod"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="265dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txtValor"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:onClick="Agregar"
        android:text="@string/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:onClick="Eliminar"
        android:text="@string/btnDel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtNom"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCod" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="254dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:onClick="Modificar"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:onClick="Listar"
        android:text="@string/btnLis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate"
        app:layout_constraintVertical_bias="0.289" />
</androidx.constraintlayout.widget.ConstraintLayout>